<resources>
    <string name="app_name">Diary</string>
    <string name="no_result">리스트가 없습니다.</string>
    <string name="title_hint">제목을 입력해주세요.</string>
    <string name="save">저장</string>
    <string name="description_hint">내용을 입력해주세요.</string>
    <string name="cancel">취소</string>
    <string name="password">비밀번호를 입력해주세요.</string>
    <string name="password_hint">15자 이내로 입력해주세요.</string>
    <string name="accept">확인</string>
</resources>